kubernetes/nextcloud/base/dragonfly/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
          podSelector:
            matchLabels:
              app: nextcloud-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9999
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
          podSelector:
            matchLabels:
              app: nextcloud-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-nextcloud
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
          podSelector:
            matchLabels:
              db: nextcloud-pg
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-nextcloud-egress
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      db: nextcloud-pg
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
          podSelector:
            matchLabels:
              app: nextcloud-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-dragonfly
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: nextcloud-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
        - ipBlock:
            cidr: 10.101.10.5/32 # OKD WildCard
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-to-openshift-ingress
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: nextcloud-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-operator-system
  namespace: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dragonfly-operator-system
          podSelector:
            matchLabels:
              control-plane: controller-manager
      ports:
        - protocol: TCP
          port: 9999
